edited existed project

--- a/posts/Indian-Bikes-Market/index.ipynb
+++ b/posts/Indian-Bikes-Market/index.ipynb
@@ -14,6 +14,8 @@
     "html: \n",
     "toc: True\n",
     "toc-title: \"On this page\"\n",
+    "page-layout: full\n",
+    "code-summary: \"Show SQL Query\"\n",
     "code-links:\n",
     "    icon: github\n",
     "    text: \"Project Repositary\"\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,99 +247,8 @@
    ],
    "source": [
     "bikes = pd.read_csv('bike_sales_india.csv')\n",
-    "bikes.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10000 entries, 0 to 9999\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                   Non-Null Count  Dtype  \n",
-      "---  ------                   --------------  -----  \n",
-      " 0   State                    10000 non-null  object \n",
-      " 1   Avg Daily Distance (km)  10000 non-null  float64\n",
-      " 2   Brand                    10000 non-null  object \n",
-      " 3   Model                    10000 non-null  object \n",
-      " 4   Price (INR)              10000 non-null  int64  \n",
-      " 5   Year of Manufacture      10000 non-null  int64  \n",
-      " 6   Engine Capacity (cc)     10000 non-null  int64  \n",
-      " 7   Fuel Type                10000 non-null  object \n",
-      " 8   Mileage (km/l)           10000 non-null  float64\n",
-      " 9   Owner Type               10000 non-null  object \n",
-      " 10  Registration Year        10000 non-null  int64  \n",
-      " 11  Insurance Status         10000 non-null  object \n",
-      " 12  Seller Type              10000 non-null  object \n",
-      " 13  Resale Price (INR)       10000 non-null  float64\n",
-      " 14  City Tier                10000 non-null  object \n",
-      "dtypes: float64(3), int64(4), object(8)\n",
-      "memory usage: 1.1+ MB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None,\n",
-       "        Avg Daily Distance (km)    Price (INR)  Year of Manufacture  \\\n",
-       " count             10000.000000   10000.000000         10000.000000   \n",
-       " mean                 42.533128  224328.722400          2019.510500   \n",
-       " std                  21.676985  100753.660447             2.907668   \n",
-       " min                   5.010000   50031.000000          2015.000000   \n",
-       " 25%                  23.907500  137900.250000          2017.000000   \n",
-       " 50%                  42.480000  223878.000000          2019.000000   \n",
-       " 75%                  61.352500  311464.250000          2022.000000   \n",
-       " max                  80.000000  399981.000000          2024.000000   \n",
-       " \n",
-       "        Engine Capacity (cc)  Mileage (km/l)  Registration Year  \\\n",
-       " count          10000.000000    10000.000000        10000.00000   \n",
-       " mean             552.695300       67.188926         2020.96510   \n",
-       " std              261.176292       20.891728            2.74897   \n",
-       " min              100.000000       25.000000         2015.00000   \n",
-       " 25%              327.000000       50.680000         2019.00000   \n",
-       " 50%              553.000000       69.850000         2022.00000   \n",
-       " 75%              780.000000       84.542500         2023.00000   \n",
-       " max             1000.000000      100.000000         2024.00000   \n",
-       " \n",
-       "        Resale Price (INR)  \n",
-       " count        10000.000000  \n",
-       " mean        133828.973998  \n",
-       " std          66613.220382  \n",
-       " min          20532.070000  \n",
-       " 25%          78680.905000  \n",
-       " 50%         128148.340000  \n",
-       " 75%         181048.192500  \n",
-       " max         317302.450000  ,\n",
-       " State                      0\n",
-       " Avg Daily Distance (km)    0\n",
-       " Brand                      0\n",
-       " Model                      0\n",
-       " Price (INR)                0\n",
-       " Year of Manufacture        0\n",
-       " Engine Capacity (cc)       0\n",
-       " Fuel Type                  0\n",
-       " Mileage (km/l)             0\n",
-       " Owner Type                 0\n",
-       " Registration Year          0\n",
-       " Insurance Status           0\n",
-       " Seller Type                0\n",
-       " Resale Price (INR)         0\n",
-       " City Tier                  0\n",
-       " dtype: int64)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "bikes.head()\n",
+    "\n",
     "bikes.info(), bikes.describe(), bikes.isnull().sum() "
    ]
   },
@@ -371,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,19 +290,20 @@
     "\n",
     "engine = create_engine('mysql://root:Karandeep2417@localhost:3306/datawarehouseanalytics')\n",
     "conn = engine.connect()\n",
-    "bikes.to_sql('bikes',con=conn,if_exists='replace',index=False) \n",
-    "\n",
-    "%load_ext sql \n",
-    "%sql mysql+pymysql://root:Karandeep2417@localhost/datawarehouseanalytics\n",
-    "%config SqlMagic.style = '_DEPRECATED_DEFAULT'"
+    "bikes.to_sql('bikes',con=conn,if_exists='replace',index=False) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| echo: False\n",
+    "%load_ext sql \n",
+    "%sql mysql+pymysql://root:Karandeep2417@localhost/datawarehouseanalytics\n",
+    "%config SqlMagic.style = '_DEPRECATED_DEFAULT'\n",
+    "\n",
     "%config SqlMagic.autopandas = True\n",
     "%config SqlMagic.feedback = 0\n",
     "%config SqlMagic.displaycon = False"
@@ -420,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -744,6 +656,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT \n",
     "brand,\n",
@@ -770,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1094,6 +1007,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "brand,\n",
@@ -1120,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1185,6 +1099,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "fuel_type,\n",
@@ -1211,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1465,6 +1380,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT \n",
     "state,\n",
@@ -1495,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1572,6 +1488,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "WITH tier_price AS\n",
     "(SELECT \n",
@@ -1604,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1659,6 +1576,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "seller_type,\n",
@@ -1683,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1752,6 +1670,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "insurance_status,\n",
@@ -1778,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1903,6 +1822,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT \n",
     "state,\n",
@@ -1930,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2033,6 +1953,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "state,\n",
@@ -2057,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2505,6 +2426,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true,\n",
     "%%sql \n",
     "SELECT\n",
     "brand,\n",
@@ -2532,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2856,6 +2778,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT\n",
     "brand,\n",
@@ -2882,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2991,6 +2914,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "WITH Revenue_Brand AS \n",
     "(SELECT \n",
@@ -3026,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3630,6 +3554,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT \n",
     "brand,\n",
@@ -3656,7 +3581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4260,6 +4185,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql\n",
     "SELECT \n",
     "brand,\n",
@@ -4286,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4377,6 +4303,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "brand,\n",
@@ -4402,7 +4329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4493,6 +4420,7 @@
     }
    ],
    "source": [
+    "#| code-fold: true\n",
     "%%sql \n",
     "SELECT \n",
     "brand,\n",
